--- a/styleLeben.css
+++ b/styleLeben.css
@@ -19,3 +19,7 @@ hr {
 }
 .ueberschrift4 {font-size: large;font-weight: bold;
 }
+.ueberschrift5 {font-size: large;font-weight: bold;
+}
+.ueberschrift6 {font-size: large;font-weight: bold;
+}
