small re-factor

--- a/styleRathaus.css
+++ b/styleRathaus.css
@@ -2,6 +2,10 @@ body {
     background-color: lightblue;
     font-style:unset ;font-size: large ;
 }
+.ueberschrift0 {font-size: x-large;font-weight: bold;
+}
+.ueberschrift1 {font-size: large;font-weight: bold;
+}
 h1 {
     background-color: black;
     color: lightblue;
@@ -10,14 +14,4 @@ h1 {
 hr {
     clear: both;
     opacity: 0;
-    }
-    .ueberschrift {font-size: larger;font-weight: bold;
-    }
-    .ueberschrift2 {font-size: x-large;font-weight: bold;
-    }
-    .ueberschrift3 {font-size: x-large;font-weight: bold;
-    }
-    .ueberschrift4 {font-size: x-large;font-weight: bold;
-    }
-    .ueberschrift5 {font-size: x-large;font-weight: bold;
     }
