--- a/styleLeben.css
+++ b/styleLeben.css
@@ -4,7 +4,7 @@ body {
 }
 .ueberschrift0 {font-size: x-large;font-weight: bold;
 }
-.ueberschrift1 {font-size: large;font-weight: bold;
+.ueberschrift1 {font-weight: bold;
 }
 h1 {
     background-color: black;
