--- a/styleStadtportrait.css
+++ b/styleStadtportrait.css
@@ -7,7 +7,6 @@ h1 {
     color: lightblue;
     padding: 5px;
 }
-.ueberschrift2 {color: blue;
-     ;font-weight: bold;}
- .ueberschrift3 {font-size: larger;font-weight: bold;
+ .ueberschrift0 {font-size: larger; font-weight: bold;
  }
+ .ueberschrift1 {color: blue; font-weight: bold;}
